--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header{
-    background-color: #97F813;
+    background-color: #e9f81352;
     color: white;
 }
 
@@ -13,7 +13,7 @@ header{
 
 
 .cabecalho{
-    background-color: #97F813;
+    background-color: #f8f4135e;
     color: white;
 }
 
