--- a/style.css
+++ b/style.css
@@ -1,30 +1,43 @@
-header{
-    background-color: #e9f81352;
-    color: white;
+/* Reset some default styles */
+body, h1, h2, p, ul, li {
+    margin: 0;
+    padding: 0;
 }
 
-
-.logotipo{
-    width: 120px;
-    position: relative;
-    top: 20px;
-    left: 20px;
+body {
+    font-family: Arial, sans-serif;
 }
 
-
-.cabecalho{
-    background-color: #f8f4135e;
-    color: rgb(0, 0, 0);
-    right: 40px;
+header {
+    background-color: #f8f8f8;
+    padding: 20px;
 }
 
-
-.cabecalho-lista{
-    display: flex;
-    position: relative;
-    left: 200;
+header h1 {
+    color: #333;
 }
 
-.cabecalho-lista-item{
-    margin-left: 20px;
+nav ul {
+    list-style-type: none;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #333;
+}
+
+section {
+    padding: 20px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
 }
