--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background: #ffd700; /* Fundo amarelo */
+    background: #ffeb78; /* Fundo amarelo */
     padding: 20px 0;
 }
 
